--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,9 @@
 <div>
-  <h1>I am the index lists page</h1>
+  <h1>Your Watchlists</h1>
   <ul>
     <% @lists.each do |list| %>
-      <li><%= list.name %></li>
+      <li><%= link_to list.name, list_path(list) %></li>
     <% end %>
   </ul>
-  <%= link_to "Add a new watchlist", new_list_path %>
+  <%= link_to "Add a new watchlist", new_list_path%>
 </div>
