--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,29 @@
 <div>
   <h1>I am the show lists page</h1>
   <h2><%= @list.name %></h2>
+  <ul>
+    <% if @list.movies.any? %>
+      <% @list.movies.each do |movie| %>
+        <li>
+          <p><% bookmark = Bookmark.find_by(list: @list, movie: movie) %></p>
+          <p><%= image_tag movie.poster_url, alt: movie.title %></p>
+          <p><%= movie.title %></p>
+          <p><%= movie.rating %></p>
+          <p><%= movie.overview %></p>
+          <p><%= bookmark.comment %></p>
+          <p><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"} %></p>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
+  <%= "You haven't added any movies yet!" if @list.movies.empty? %>
+  <br>
+  <%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %>
+  <br>
+  <%= link_to "Delete list",
+    list_path(@list),
+    data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"}
+  %>
+  <br>
   <%= link_to 'Back to the watchlist', lists_path %>
 </div>
