--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,14 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+/* SCSS HEX */
+// $cultured: #f8f9faff;
+// $cultured-2: #e9ecefff;
+// $gainsboro: #dee2e6ff;
+// $light-gray: #ced4daff;
+// $cadet-blue-crayola: #adb5bdff;
+// $sonic-silver: #6c757dff;
+// $davys-grey: #495057ff;
+// $onyx: #343a40ff;
+// $eerie-black: #212529ff;
