--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,6 @@
-<div>
+<div class='container py-5'>
   <h1>Your Watchlists</h1>
+  <hr>
   <ul>
     <% @lists.each do |list| %>
       <li><%= link_to list.name, list_path(list) %></li>
