--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,9 +1,11 @@
-<div>
+<div class='container py-5'>
   <h1>Add a new watchlist</h1>
+  <hr>
   <%= simple_form_for(@list) do |f| %>
     <%= f.input :name, placeholder: 'E.g. Films to watch with Kyle' %>
     <%= f.input :image, as: :file %>
     <%= f.submit 'Add', class: 'btn btn-dark'%>
   <% end %>
+  <hr>
   <%= link_to "Back to the watchlists", lists_path %>
 </div>
