--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,16 +1,16 @@
-<div>
-  <h1>I am the show lists page</h1>
-  <h2><%= @list.name %></h2>
+<div class='container py-5'>
+  <h1><%= @list.name %></h1>
+  <hr>
   <ul>
     <% if @list.movies.any? %>
       <% @list.movies.each do |movie| %>
         <li>
           <p><% bookmark = Bookmark.find_by(list: @list, movie: movie) %></p>
           <p><%= image_tag movie.poster_url, alt: movie.title %></p>
-          <p><%= movie.title %></p>
-          <p><%= movie.rating %></p>
+          <p><strong><%= movie.title.upcase %></strong></p>
+          <p><strong>Rating: </strong><%= movie.rating %></p>
           <p><%= movie.overview %></p>
-          <p><%= bookmark.comment %></p>
+          <p><strong>Comment: </strong><%= bookmark.comment %></p>
           <p><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"} %></p>
         </li>
       <% end %>
@@ -18,6 +18,7 @@
   </ul>
   <%= "You haven't added any movies yet!" if @list.movies.empty? %>
   <br>
+  <hr>
   <%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %>
   <br>
   <%= link_to "Delete list",
@@ -25,5 +26,5 @@
     data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"}
   %>
   <br>
-  <%= link_to 'Back to the watchlist', lists_path %>
+  <%= link_to 'Back to the watchlists', lists_path %>
 </div>
