--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,15 +7,14 @@
     <h3 class="mb-0">Lists</h3>
     <%= link_to "Create a movie list", new_list_path, class: "btn btn-flat" %>
   </div>
-  <div class="row">
-    <div class="card-product">
-      <%= cl_image_tag("https://res.cloudinary.com/dus7txcod/image/upload/v1660272458/khv8eak7gqadkkchj2i3.jpg",
-      width: 400, height: 300, crop: :fill) %>
-      <div class="card-product-infos">
-        <% @lists.each do |list| %>
-          <%= link_to list.name, list_path(list) %>
-        <% end %>
+  <% @lists.each do |list| %>
+    <div class="row">
+      <div class="card-product mt-5">
+        <%= image_tag list.photo.attached? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU' %>
+        <div class="card-product-infos">
+          <h2><%= link_to list.name, list_path(list) %></h2>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
 </div>
