--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,31 +1,35 @@
-<div class='container py-5'>
-  <h1><%= @list.name %></h1>
-  <hr>
-  <% @list.bookmarks.each do |bookmark| %>
-    <div class="card-trip mt-3">
-      <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title %>
-      <div>
-        <div class="card-trip-infos">
-          <div>
-            <h2><strong><%= bookmark.movie.title.upcase %></strong></h2>
-            <p><strong>Rating: </strong><%= bookmark.movie.rating %></p>
-            <p><%= bookmark.movie.overview %><br>
-              <strong>Comment: </strong><%= bookmark.comment %><br>
-              <%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{bookmark.movie.title} from your #{@list.name} list"} %>
-            </p>
+<div>
+  <div class='container py-5'>
+    <h1><%= @list.name %></h1>
+    <hr>
+    <% @list.bookmarks.each do |bookmark| %>
+      <div class="card-trip mt-3">
+        <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title %>
+        <div>
+          <div class="card-trip-infos">
+            <div>
+              <h2><strong><%= bookmark.movie.title.upcase %></strong></h2>
+              <p><strong>Rating: </strong><%= bookmark.movie.rating %></p>
+              <p><%= bookmark.movie.overview %><br>
+                <strong>Comment: </strong><%= bookmark.comment %><br>
+                <%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{bookmark.movie.title} from your #{@list.name} list"} %>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </div >
-  <% end %>
-</div>
-<div>
-  <%= "You haven't added any movies yet!" if @list.movies.empty? %>
-</div>
-<div>
-  <br>
-  <%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"} %>
-</div>
-<div><%= link_to 'Back to the watchlists', lists_path %></div>
-<%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %>
+      </div >
+    <% end %>
+  </div>
+  <div class='container py-5' >
+    <%= "You haven't added any movies yet!" if @list.movies.empty? %>
+  </div>
+  <div class='container py-5 d-flex justify-content-center'>
+    <ul class="list-inline">
+      <li class="list-inline-item"><%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"} %></li>
+      <li class="list-inline-item">
+        <div><%= link_to 'Back to the watchlists', lists_path %></div>
+      </li>
+      <li class="list-inline-item"><%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %></li>
+    </ul>
+  </div>
 </div>
