--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,10 @@
 <div class='container mt-5'>
-  <h1>My Movie Watchlist</h1>
+  <h1>We should watch that...</h1>
   <hr>
 </div>
-<div class='container py-5'>
+<div class='container py-5 col-12 col-l-3'>
   <div class="d-flex align-items-center justify-content-between mb-3">
-    <h3 class="mb-0">Lists</h3>
+    <h3 class="mb-0">My Watchlists</h3>
     <%= link_to "Create a movie list", new_list_path, class: "btn btn-flat" %>
   </div>
   <% @lists.each do |list| %>
