--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -25,11 +25,11 @@
   </div>
   <div class='container py-5 d-flex justify-content-center'>
     <ul class="list-inline">
-      <li class="list-inline-item"><%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"} %></li>
-      <li class="list-inline-item">
+      <li class="list-inline-item btn btn-flat"><%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %></li>
+      <li class="list-inline-item btn btn-flat"><%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"} %></li>
+      <li class="list-inline-item btn btn-flat">
         <div><%= link_to 'Back to the watchlists', lists_path %></div>
       </li>
-      <li class="list-inline-item"><%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %></li>
     </ul>
   </div>
 </div>
