--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,12 +2,15 @@
   <h1>Bookmark a new movie to the <strong><%= @list.name %></strong> watchlist</h1>
   <hr>
   <%= simple_form_for [@list, @bookmark] do |f| %>
-    <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
     <%= f.association :movie, prompt: 'Select a movie' %>
+    <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
     <%= f.submit 'Add movie', class: 'btn btn-dark'%>
   <% end %>
   <hr>
-  <%= link_to "Back to the '#{@list.name}' list", list_path(@list) %>
-  <br>
-  <%= link_to "Back to the watchlists", lists_path %>
+  <div class='container py-5 d-flex justify-content-center'>
+    <ul class="list-inline">
+      <li class="list-inline-item btn btn-flat"><%= link_to "Back to the '#{@list.name}' list", list_path(@list) %></li>
+      <li class="list-inline-item btn btn-flat"><%= link_to "Back to the watchlists", lists_path %></li>
+    </ul>
+  </div>
 </div>
