--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,6 @@
 <div class='container mt-5'>
   <h1>We should watch that...</h1>
+  <p>Never forget about a movie you want to watch again</p>
   <hr>
 </div>
 <div class='container py-5 col-12 col-l-3'>
