--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,21 +1,30 @@
+<%# <div>
+  <nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-brand my-0 p-2 h1"><i class="fa-solid fa-couch"></i></span>
+  </nav>
+</div> %>
 <div class='container mt-5'>
-  <h1>We should watch that...</h1>
+  <h1><strong>We should watch that...</strong></h1>
   <p>Never forget about a movie you want to watch again</p>
   <hr>
 </div>
-<div class='container py-5 col-12 col-l-3'>
+<div class='container py-5'>
   <div class="d-flex align-items-center justify-content-between mb-3">
-    <h3 class="mb-0">My Watchlists</h3>
+    <h3 class="p-2 mb-0">My Watchlists</h3>
     <%= link_to "Create a movie list", new_list_path, class: "btn btn-flat" %>
   </div>
-  <% @lists.each do |list| %>
-    <div class="row">
-      <div class="card-product mt-5">
-        <%= image_tag list.photo.attached? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU' %>
-        <div class="card-product-infos">
-          <h2><%= link_to list.name, list_path(list) %></h2>
+  <div class='container overflow-hidden'>
+    <div class='row gx-5'>
+      <% @lists.each do |list| %>
+        <div class="col-sm-6">
+          <div class="card-product mt-5">
+            <%= image_tag list.photo.attached? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU' %>
+            <div class="card-product-infos">
+              <h2><%= link_to list.name, list_path(list) %></h2>
+            </div>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
