--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,17 +1,19 @@
 <div class='container py-5'>
   <h1><%= @list.name %></h1>
   <hr>
+</div>
+<div class='container'>
   <% @list.bookmarks.each do |bookmark| %>
-    <div class="card-trip mt-3">
+    <div class="card-trip mb-5 col-md-6">
       <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title %>
       <div>
         <div class="card-trip-infos">
           <div>
             <h2><strong><%= bookmark.movie.title.upcase %></strong></h2>
-            <p><strong>Rating: </strong><%= bookmark.movie.rating %></p>
-            <p><%= bookmark.movie.overview %><br>
-              <strong>Comment: </strong><%= bookmark.comment %><br>
-              <%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{bookmark.movie.title} from your #{@list.name} list"} %>
+            <p class='mb-2'><strong>Rating: </strong><%= bookmark.movie.rating %></p>
+            <p class='mb-2'><%= bookmark.movie.overview %></p>
+            <p><strong>Comment: </strong><%= bookmark.comment %><br>
+              <strong><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{bookmark.movie.title} from your #{@list.name} list"} %></strong>
             </p>
           </div>
         </div>
