--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -43,6 +43,7 @@
   background: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   border-radius: 3px;
+  margin: 20px;
   &:hover {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
   }
