--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,27 +2,29 @@
   <h1><%= @list.name %></h1>
   <hr>
 </div>
-<div class='container'>
-  <% @list.bookmarks.each do |bookmark| %>
-    <div class="card-trip mb-5 col-md-6">
-      <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title %>
-      <div>
-        <div class="card-trip-infos">
-          <div>
-            <h2><strong><%= bookmark.movie.title.upcase %></strong></h2>
-            <p class='mb-2'><strong>Rating: </strong><%= bookmark.movie.rating %></p>
-            <p class='mb-2'><%= bookmark.movie.overview %></p>
-            <p><strong>Comment: </strong><%= bookmark.comment %><br>
-              <strong><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{bookmark.movie.title} from your #{@list.name} list"} %></strong>
-            </p>
+<div class='container col-12 col-lg-6'>
+  <div class='container'>
+    <% @list.bookmarks.each do |bookmark| %>
+      <div class="card-trip mb-5">
+        <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title %>
+        <div>
+          <div class="card-trip-infos">
+            <div>
+              <h2><strong><%= bookmark.movie.title.upcase %></strong></h2>
+              <p class='mb-2'><strong>Rating: </strong><%= bookmark.movie.rating %></p>
+              <p class='mb-2'><%= bookmark.movie.overview %></p>
+              <p><strong>Comment: </strong><%= bookmark.comment %><br>
+                <strong><%= link_to "Delete", bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{bookmark.movie.title} from your #{@list.name} list"} %></strong>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </div >
-  <% end %>
+      </div >
+    <% end %>
+  </div>
 </div>
-<div class='container py-5' >
-  <%= "You haven't added any movies yet!" if @list.movies.empty? %>
+<div class='container d-flex justify-content-center' >
+  <strong><%= "You haven't added any movies yet!" if @list.movies.empty? %></strong>
 </div>
 <div class='container py-5 d-flex justify-content-center'>
   <ul class="list-inline">
