--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,18 +1,19 @@
 <div class='container py-5'>
   <h1>Bookmark a new movie to the <strong><%= @list.name %></strong> watchlist</h1>
   <hr>
-  <div>
-    <%= simple_form_for [@list, @bookmark] do |f| %>
-      <%= f.association :movie, prompt: 'Select a movie' %>
-      <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
-      <%= f.submit 'Add movie', class: 'btn btn-dark'%>
-    <% end %>
+  <div class='container col-8 pt-3'>
+    <div>
+      <%= simple_form_for [@list, @bookmark] do |f| %>
+        <%= f.association :movie, prompt: 'Select a movie' %>
+        <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
+        <%= f.submit 'Add movie', class: 'btn btn-dark'%>
+      <% end %>
+    </div>
   </div>
-  <hr>
   <div class='container py-5 d-flex justify-content-center'>
     <ul class="list-inline">
-      <li class="list-inline-item btn btn-flat"><%= link_to "Back to the '#{@list.name}' list", list_path(@list) %></li>
-      <li class="list-inline-item btn btn-flat"><%= link_to "Back to the watchlists", lists_path %></li>
+      <li class="list-inline-item btn btn-flat mx-4"><%= link_to "Back to the '#{@list.name}' list", list_path(@list) %></li>
+      <li class="list-inline-item btn btn-flat mx-4"><%= link_to "Back to the watchlists", lists_path %></li>
     </ul>
   </div>
 </div>
