--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -26,11 +26,11 @@
 <div class='container d-flex justify-content-center' >
   <strong><%= "You haven't added any movies yet!" if @list.movies.empty? %></strong>
 </div>
-<div class='container py-5 d-flex justify-content-center'>
-  <ul class="list-inline">
-    <li class="list-inline-item btn btn-flat"><%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %></li>
-    <li class="list-inline-item btn btn-flat"><%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"} %></li>
-    <li class="list-inline-item btn btn-flat">
+<div class='container py-5'>
+  <ul class="list-inline d-flex justify-content-center">
+    <li class="list-inline-item btn btn-flat mx-4"><%= link_to 'Add a movie to the list', new_list_bookmark_path(@list) %></li>
+    <li class="list-inline-item btn btn-flat mx-4"><%= link_to "Delete list", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?"} %></li>
+    <li class="list-inline-item btn btn-flat mx-4">
       <div><%= link_to 'Back to the watchlists', lists_path %></div>
     </li>
   </ul>
