--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class='container py-5 d-flex justify-content-center'>
-    <ul class="list-inline">
+    <ul class="list-inline d-flex">
       <li class="list-inline-item btn btn-flat mx-4"><%= link_to "Back to the '#{@list.name}' list", list_path(@list) %></li>
       <li class="list-inline-item btn btn-flat mx-4"><%= link_to "Back to the watchlists", lists_path %></li>
     </ul>
