--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
   <body>
+    <div>
+      <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand my-0 ms-3 h1"><i class="fa-solid fa-couch"></i></span>
+      </nav>
+    </div>
     <%= yield %>
   </body>
 </html>
