--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,10 +2,10 @@
   justify-content: space-between;
 }
 
-// .navbar .navbar-collapse {
-//   flex-grow: 0;
-// }
+.navbar .navbar-collapse {
+  flex-grow: 0;
+}
 
-// .navbar .navbar-brand img {
-//   width: 40px;
-// }
+.navbar .navbar-brand img {
+  width: 40px;
+}
