--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,13 @@
   </head>
   <body>
     <%= render 'pages/navbar' %>
-    <%= yield %>
-    <%= render 'pages/footer' %>
+    <div id="page-container">
+      <div id="content-wrap">
+        <div class="content">
+          <%= yield %>
+        </div>
+        <%= render "pages/footer" %>
+      </div>
+    </div>
   </body>
 </html>
