--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -3,6 +3,6 @@
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1"> <%= link_to lists_path, class: "navbar-brand" do %>
         <%= image_tag "white-logo.png" %>
-      <% end %></span>
+      <% end %>We Should Watch That</span>
   </div>
 </nav>
