--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <span class="navbar-brand mb-0 h1"> <%= link_to lists_path, class: "navbar-brand" do %>
-        <%= image_tag "white-logo.png" %>
+        <%= image_tag "favicon.ico" %>
       <% end %>We Should Watch That</span>
   </div>
 </nav>
